--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <p id="back-top"><a href="#page-top"><i class="fa fa-angle-up"></i></a></p>
 <footer>
   <div class="container text-center">
-    <p>&copy; All Rights Reserved | Design by: <a target="_blank" rel="nofollow noopener" href="http://P&P.com/">P&P</a></p>
+    <p>&copy; All Rights Reserved | Design by: <a target="_blank" rel="nofollow noopener" href=""></a></p>
   </div>
 </footer>
 <div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
